--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,9 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -74,20 +74,6 @@
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="Wave Strength" />
             </android.support.constraint.ConstraintLayout>
-
-            <Button
-                android:id="@+id/reset"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/button"
-                tools:text="reset all" />
-
-            <Button
-                android:id="@+id/resetWave"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/button"
-                tools:text="Reset Waves" />
 
         </LinearLayout>
     </ScrollView>
