--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -7,7 +7,6 @@
     tools:context=".MainActivity">
 
 
-
     <com.example.gregor.wavesimulator.WaveView
         android:id="@+id/waveView"
         android:layout_width="0dp"
@@ -19,7 +18,7 @@
         app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:layout_width="0dp"
@@ -28,8 +27,9 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toEndOf="@+id/waveView"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -48,7 +48,8 @@
                 android:id="@+id/switch1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/outflow_switch" />
+                android:text="@string/outflow_switch"
+                android:textSize="18sp" />
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/WaveStrengthContainer"
@@ -59,9 +60,7 @@
                     android:id="@+id/WaveStrengthseekBar"
                     android:layout_width="0dp"
                     android:layout_height="35dp"
-                    android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
                     android:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -72,14 +71,13 @@
                 <TextView
                     android:id="@+id/WaveStrengthLabel"
                     android:layout_width="wrap_content"
-                    android:layout_height="19dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_weight="1"
                     android:text="@string/button"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"
                     app:layout_constraintBottom_toTopOf="@+id/WaveStrengthseekBar"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="Wave Strength" />
