--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#1919b3</item>
-        <item name="colorPrimaryDark">#1919b3</item>
-        <item name="colorAccent">#cc33ff</item>
+        <item name="colorPrimary">#005294</item>
+        <item name="colorPrimaryDark">#003360</item>
+        <item name="colorAccent">#E37222</item>
     </style>
 
 </resources>
