--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_eraser"
+        android:icon="@drawable/ic_remove_circle_outline_24dp"
+        app:showAsAction="always">
+    </item>
+    <item
         android:id="@+id/action_brush"
         android:icon="@drawable/ic_brush_stroke_24dp"
         app:showAsAction="always">
