--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
-    <wavesimulator.WaveView
+    <Interface.WaveView
         android:id="@+id/waveView"
         android:layout_width="0dp"
         android:layout_height="0dp"
